# Journal-Research-Data-Policy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README-dev.txt  README.md  detect_emails.py  pyproject.toml  remove_emails.py  requirements-dev.txt  requirements-score.txt  requirements.txt  topic-answer-overview.tsv  yq-extract-texts-and-explanations.history
.github/workflows/: ci-cd.yaml
data/: question_identifiers.yaml
data/analysis/saulius-generate-overview/: .gitignore  Makeconfig-paths  Makefile  Makelocal-answers  Makelocal-gen-overview  TO-DO.txt
data/analysis/saulius-generate-overview/inputs/: processed
data/processed/: find-sed-patch-yaml.history  move_backup_files.py  patch_question_identifiers.py  patch_question_identifiers.sed  patch_question_identifiers.sed.history  test_fail.csv
data/raw/: question_type.yaml  rdp.csv  test_pass.csv
histories/: answer-summary-statistics.history
notebooks/exploration/: Sankey_example.ipynb  analysis_example.ipynb  check_coverage.ipynb  correct-AIP.ipynb  example.ipynb  fix_aps.ipynb  fix_aps_tf.ipynb  fix_bentham.ipynb  fix_tf.ipynb  test.ipynb
notebooks/fix_inconsistencies/: check_inconsistencies.ipynb  fix_aps.ipynb  fix_bentham.ipynb  fix_tf.ipynb  fix_wiley.ipynb
src/daemon_analysis_tools/: __init__.py  config.py  data_processing.py  file_handling.py  function.py  scoring.py  visualization.py
src/daemon_analysis_tools/data/: journal.py  publisher.py  question.py  utils.py
src/tests/: test_data_processing.py  test_file_handling.py  test_function.py  test_scoring.py  test_visualization.py
(+147 files in other folders)
